[fix] : fix wrap in table

--- a/zood/config/index.css
+++ b/zood/config/index.css
@@ -249,6 +249,7 @@ blockquote {
 
 .markdown-body table th {
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .markdown-body table td,
